--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "ext:build": "yarn --pnp && yarn rollup:build && yarn web-ext build --overwrite-dest --source-dir ./dist/  "
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.0.3",
     "fs-extra": "^8.1.0",
-    "rollup": "^1.17.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "web-ext": "^3.1.1"
+    "rollup": "^2.6.1",
+    "rollup-plugin-terser": "^5.3.0",
+    "web-ext": "^4.1.0"
   },
   "installConfig": {
     "pnp": true
