--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,9 +1,6 @@
 {
   "background": {
-    "persistent": false,
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
@@ -21,12 +18,21 @@
     "16": "images/16.png",
     "48": "images/48.png"
   },
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "douban Plus",
   "permissions": [
-    "*://www.imdb.com/",
-    "*://raw.githubusercontent.com/",
     "storage"
   ],
+  "host_permissions": [
+    "*://www.imdb.com/*",
+    "*://raw.githubusercontent.com/*"
+  ],
+  "action": {
+    "default_icon": {
+      "16": "images/16.png",
+      "48": "images/48.png",
+      "128": "images/128.png"
+    }
+  },
   "version": "0.0.8"
 }
